# transmission-streaming-android

./: .gitignore  Android.mk  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  gdb.setup  update-version-h.sh
cli/: Makefile.in  cli.c
daemon/: Android.mk  daemon.c  remote.c  watch.c
doc/: Makefile.in  extract.py  instru-format.txt
doc/debian/: mkdeb.sh
libtransmission/: Android.mk  JSON_parser.c  Makefile.am  Makefile.in  bandwidth.c  bencode.c  bitfield.c  bitfield.h  bitset.h  blocklist.c  clients.c  completion.c  completion.h  crypto.c  fdlimit.c  fdlimit.h  handshake.c  inout.c  instrumentation.c  instrumentation.h  list.c  list.h  makemeta.c  makemeta.h  metainfo.c  net.c  net.h  peer-common.h  peer-io.c  peer-io.h  peer-mgr.c  peer-mgr.h  peer-msgs.c  peer-msgs.h  platform.c  platform.h  playback.c  playback.h  port-forwarding.c  ptrarray.c  (+19 more)
openssl/: android-config.mk
po/: bg.po  fr.po  gl.po  pl.po  ro.po  ru.po
utils/: extract.py
utils/debian/: control  mkdeb.sh
web/images/buttons/: Makefile.in
web/images/graphics/: Makefile.in
web/javascript/: Makefile.in
web/javascript/jquery/: Makefile.in
